add autoload release

--- a/packages/v2.md
+++ b/packages/v2.md
@@ -13,6 +13,7 @@ By "Google Beta" we mean that the packages are stable-ish, and while we will att
 
 The current packages with v2 releases are:
 
+- [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
 
 The current library packages with v2 development branches are:
