Aura.Sql v2 beta release

--- a/packages/v2.md
+++ b/packages/v2.md
@@ -15,6 +15,7 @@ The current packages with v2 releases are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
+- [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
 
 The current library packages with v2 development branches are:
 
