--- a/packages/v2.md
+++ b/packages/v2.md
@@ -14,10 +14,11 @@ By "Google Beta" we mean that the packages are stable-ish, and while we will att
 The current packages with v2 releases are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
+- [Aura.Dispatcher](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
 
-The current library packages with v2 development branches are:
+The current **library** packages with v2 development branches are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/tree/develop-2)
 - [Aura.Cli](https://github.com/auraphp/Aura.Cli/tree/develop-2)
@@ -32,7 +33,7 @@ The current library packages with v2 development branches are:
 - [Aura.View](https://github.com/auraphp/Aura.View/tree/develop-2)
 - [Aura.Web](https://github.com/auraphp/Aura.Web/tree/develop-2)
 
-The current library packages with v2 development branches are:
+The current **project** packages with v2 development branches are:
 
 - [Aura.Cli_Project](https://github.com/auraphp/Aura.Cli_Project)
 - [Aura.Framework_Project](https://github.com/auraphp/Aura.Framework_Project)
