--- a/packages/v2.md
+++ b/packages/v2.md
@@ -11,25 +11,26 @@ We are beginning to make "Google Beta" version 2 releases of selected Aura packa
 
 By "Google Beta" we mean that the packages are stable-ish, and while we will attempt to maintain backwards compatibility between beta releases, we cannot make any guarantees.
 
-The current packages with v2 releases are:
+The current **library** packages with v2 releases are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
 - [Aura.Dispatcher](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
+- [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/releases)
 
 The current **library** packages with v2 development branches are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/tree/develop-2)
 - [Aura.Cli](https://github.com/auraphp/Aura.Cli/tree/develop-2)
 - [Aura.Di](https://github.com/auraphp/Aura.Di/tree/develop-2)
-- [Aura.Dispatcher](https://github.com/auraphp/Aura.Dispatcher)
-- [Aura.Html](https://github.com/auraphp/Aura.Html)
-- [Aura.Includer](https://github.com/auraphp/Aura.Includer)
+- [Aura.Dispatcher](https://github.com/auraphp/Aura.Dispatcher/tree/develop-2)
+- [Aura.Html](https://github.com/auraphp/Aura.Html/tree/develop-2)
+- [Aura.Includer](https://github.com/auraphp/Aura.Includer/tree/develop-2)
 - [Aura.Router](https://github.com/auraphp/Aura.Router/tree/develop-2)
 - [Aura.Sql](https://github.com/auraphp/Aura.Sql/tree/develop-2)
-- [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query)
-- [Aura.Sql_Schema](https://github.com/auraphp/Aura.Sql_Schema)
+- [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/tree/develop-2)
+- [Aura.Sql_Schema](https://github.com/auraphp/Aura.Sql_Schema/tree/develop-2)
 - [Aura.View](https://github.com/auraphp/Aura.View/tree/develop-2)
 - [Aura.Web](https://github.com/auraphp/Aura.Web/tree/develop-2)
 
@@ -38,6 +39,8 @@ The current **project** packages with v2 development branches are:
 - [Aura.Cli_Project](https://github.com/auraphp/Aura.Cli_Project)
 - [Aura.Framework_Project](https://github.com/auraphp/Aura.Framework_Project)
 - [Aura.Web_Project](https://github.com/auraphp/Aura.Web_Project)
+
+> N.b.: Whereas library packages have no dependencies, the project packages that use them are dependent on the libraries.
 
 
 From v1 to v2
