--- a/packages/v2.md
+++ b/packages/v2.md
@@ -16,6 +16,7 @@ The current **library** packages with v2 releases are:
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
 - [Aura.Dispatcher](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
+- [Aura.Router](https://github.com/auraphp/Aura.Router/releases)
 - [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
 - [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/releases)
 
