add Aura.Web v2 beta1 release

--- a/packages/v2.md
+++ b/packages/v2.md
@@ -19,6 +19,7 @@ The current **library** packages with v2 releases are:
 - [Aura.Router](https://github.com/auraphp/Aura.Router/releases)
 - [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
 - [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/releases)
+- [Aura.Web](https://github.com/auraphp/Aura.Web/releases)
 
 The current **library** packages with v2 development branches are:
 
