--- a/packages/v2.md
+++ b/packages/v2.md
@@ -14,6 +14,7 @@ By "Google Beta" we mean that the packages are stable-ish, and while we will att
 The current **library** packages with v2 releases are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
+- [Aura.Cli](https://github.com/auraphp/Aura.Cli/releases)
 - [Aura.Dispatcher](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Router](https://github.com/auraphp/Aura.Router/releases)
