use the right link, fixes #38. thanks @jburns131.

--- a/packages/v2.md
+++ b/packages/v2.md
@@ -15,7 +15,7 @@ The current **library** packages with v2 releases are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
 - [Aura.Cli](https://github.com/auraphp/Aura.Cli/releases)
-- [Aura.Dispatcher](https://github.com/auraphp/Aura.Includer/releases)
+- [Aura.Dispatcher](https://github.com/auraphp/Aura.Dispatcher/releases)
 - [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
 - [Aura.Router](https://github.com/auraphp/Aura.Router/releases)
 - [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
