--- a/packages/v2.md
+++ b/packages/v2.md
@@ -11,7 +11,7 @@ We are beginning to make "Google Beta" version 2 releases of selected Aura packa
 
 By "Google Beta" we mean that the packages are stable-ish, and while we will attempt to maintain backwards compatibility between beta releases, we cannot make any guarantees.
 
-The current **library** packages with v2 releases are:
+The current packages with v2 releases are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
 - [Aura.Cli](https://github.com/auraphp/Aura.Cli/releases)
@@ -22,8 +22,11 @@ The current **library** packages with v2 releases are:
 - [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/releases)
 - [Aura.Sql_Schema](https://github.com/auraphp/Aura.Sql_Schema/releases)
 - [Aura.Web](https://github.com/auraphp/Aura.Web/releases)
+- [Aura.Cli_Project](https://github.com/auraphp/Aura.Cli_Project/releases)
+- [Aura.Framework_Project](https://github.com/auraphp/Aura.Framework_Project/releases)
+- [Aura.Web_Project](https://github.com/auraphp/Aura.Web_Project/releases)
 
-The current **library** packages with v2 development branches are:
+The current packages with v2 development branches are:
 
 - [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/tree/develop-2)
 - [Aura.Cli](https://github.com/auraphp/Aura.Cli/tree/develop-2)
@@ -37,9 +40,6 @@ The current **library** packages with v2 development branches are:
 - [Aura.Sql_Schema](https://github.com/auraphp/Aura.Sql_Schema/tree/develop-2)
 - [Aura.View](https://github.com/auraphp/Aura.View/tree/develop-2)
 - [Aura.Web](https://github.com/auraphp/Aura.Web/tree/develop-2)
-
-The current **project** packages with v2 development branches are:
-
 - [Aura.Cli_Project](https://github.com/auraphp/Aura.Cli_Project)
 - [Aura.Framework_Project](https://github.com/auraphp/Aura.Framework_Project)
 - [Aura.Web_Project](https://github.com/auraphp/Aura.Web_Project)
