--- a/packages/v2.md
+++ b/packages/v2.md
@@ -7,44 +7,13 @@ active: packages-v2
 Aura v2 Packages
 ================
 
-We are beginning to make "Google Beta" version 2 releases of selected Aura packages.  The guiding principle behind the v2 releases is to continue [the process that led to Aura in the first place](/packages): identifying and then separating functionality into independent, fully decoupled libraries.
+The guiding principle behind the v2 releases is to continue [the process that led to Aura in the first place](/packages): identifying and then separating functionality into independent, fully decoupled libraries.
 
-By "Google Beta" we mean that the packages are stable-ish, and while we will attempt to maintain backwards compatibility between beta releases, we cannot make any guarantees.
+With v2, we add the concept of "kernel" (`*_Kernel`) and "project" (`*_Project`) packages. Whereas library packages have no dependencies, kernel and project packages combine other packages together, and so are dependent on those packages.
 
-The current packages with v2 releases are:
+The current v2 packages are:
 
-- [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/releases)
-- [Aura.Cli](https://github.com/auraphp/Aura.Cli/releases)
-- [Aura.Dispatcher](https://github.com/auraphp/Aura.Dispatcher/releases)
-- [Aura.Includer](https://github.com/auraphp/Aura.Includer/releases)
-- [Aura.Router](https://github.com/auraphp/Aura.Router/releases)
-- [Aura.Sql](https://github.com/auraphp/Aura.Sql/releases)
-- [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/releases)
-- [Aura.Sql_Schema](https://github.com/auraphp/Aura.Sql_Schema/releases)
-- [Aura.Web](https://github.com/auraphp/Aura.Web/releases)
-- [Aura.Cli_Project](https://github.com/auraphp/Aura.Cli_Project/releases)
-- [Aura.Framework_Project](https://github.com/auraphp/Aura.Framework_Project/releases)
-- [Aura.Web_Project](https://github.com/auraphp/Aura.Web_Project/releases)
-
-The current packages with v2 development branches are:
-
-- [Aura.Autoload](https://github.com/auraphp/Aura.Autoload/tree/develop-2)
-- [Aura.Cli](https://github.com/auraphp/Aura.Cli/tree/develop-2)
-- [Aura.Di](https://github.com/auraphp/Aura.Di/tree/develop-2)
-- [Aura.Dispatcher](https://github.com/auraphp/Aura.Dispatcher/tree/develop-2)
-- [Aura.Html](https://github.com/auraphp/Aura.Html/tree/develop-2)
-- [Aura.Includer](https://github.com/auraphp/Aura.Includer/tree/develop-2)
-- [Aura.Router](https://github.com/auraphp/Aura.Router/tree/develop-2)
-- [Aura.Sql](https://github.com/auraphp/Aura.Sql/tree/develop-2)
-- [Aura.Sql_Query](https://github.com/auraphp/Aura.Sql_Query/tree/develop-2)
-- [Aura.Sql_Schema](https://github.com/auraphp/Aura.Sql_Schema/tree/develop-2)
-- [Aura.View](https://github.com/auraphp/Aura.View/tree/develop-2)
-- [Aura.Web](https://github.com/auraphp/Aura.Web/tree/develop-2)
-- [Aura.Cli_Project](https://github.com/auraphp/Aura.Cli_Project)
-- [Aura.Framework_Project](https://github.com/auraphp/Aura.Framework_Project)
-- [Aura.Web_Project](https://github.com/auraphp/Aura.Web_Project)
-
-> N.b.: Whereas library packages have no dependencies, the project packages that use them are dependent on the libraries.
+{% include packages-v2.md %}
 
 
 From v1 to v2
